[package]
name = "peniko"
version = "0.6.0"
license = "Apache-2.0 OR MIT"
edition = "2024"
description = "Primitive types for styling vector graphics"
keywords = ["graphics", "vector", "style"]
categories = ["graphics"]
repository = "https://github.com/linebender/peniko"
readme = "README.md"
# Keep in sync with RUST_MIN_VER in .github/workflows/ci.yml and with the relevant README.md files.
# and with the MSRV in the `Unreleased` section of CHANGELOG.md.
rust-version = "1.85"
exclude = [".github", ".clippy.toml", ".gitignore", ".typos.toml", ".taplo.toml"]

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = ["std"]
std = ["color/std", "kurbo/std", "linebender_resource_handle/std"]
bytemuck = ["color/bytemuck", "dep:bytemuck"]
libm = ["color/libm", "kurbo/libm"]
mint = ["kurbo/mint"]
serde = [
    "color/serde",
    "smallvec/serde",
    "kurbo/serde",
    "linebender_resource_handle/serde",
    "dep:serde",
]

[dependencies]
kurbo = { version = "0.13.0", default-features = false }
smallvec = "1.15.1"
bytemuck = { version = "1.24.0", default-features = false, optional = true }
color = { version = "0.3.2", default-features = false }
linebender_resource_handle = { version = "0.1.1", default-features = false }
serde = { version = "1.0.228", default-features = false, optional = true, features = [
    "alloc",
    "derive",
] }

[lints]
rust.unsafe_code = "deny"

# LINEBENDER LINT SET - Cargo.toml - v7
# See https://linebender.org/wiki/canonical-lints/
rust.keyword_idents_2024 = "forbid"
rust.non_ascii_idents = "forbid"
rust.non_local_definitions = "forbid"
rust.unsafe_op_in_unsafe_fn = "forbid"

rust.elided_lifetimes_in_paths = "warn"
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.trivial_numeric_casts = "warn"
rust.unnameable_types = "warn"
rust.unreachable_pub = "warn"
rust.unused_import_braces = "warn"
rust.unused_lifetimes = "warn"
rust.unused_macro_rules = "warn"
rust.unused_qualifications = "warn"

clippy.too_many_arguments = "allow"

clippy.allow_attributes_without_reason = "warn"
clippy.cast_possible_truncation = "warn"
clippy.collection_is_never_read = "warn"
clippy.default_trait_access = "warn"
clippy.dbg_macro = "warn"
clippy.debug_assert_with_mut_call = "warn"
clippy.doc_markdown = "warn"
clippy.fn_to_numeric_cast_any = "warn"
clippy.infinite_loop = "warn"
clippy.large_stack_arrays = "warn"
clippy.mismatching_type_param_order = "warn"
clippy.missing_assert_message = "warn"
clippy.missing_fields_in_debug = "warn"
clippy.same_functions_in_if_condition = "warn"
clippy.semicolon_if_nothing_returned = "warn"
clippy.should_panic_without_expect = "warn"
clippy.todo = "warn"
clippy.unseparated_literal_suffix = "warn"
clippy.use_self = "warn"

clippy.cargo_common_metadata = "warn"
clippy.negative_feature_names = "warn"
clippy.redundant_feature_names = "warn"
clippy.wildcard_dependencies = "warn"
# END LINEBENDER LINT SET
